[package]
name = "tf_bridge_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
tinkerforge-async = { version = "0.0.5", features = ["prometheus"] }
tokio = { version = "1.33.0", features = ["fs", "macros"] }
tokio-stream = { version = "0.1.14", features = ["time", "sync"] }
sub-array = "0.1.1"
bitmap-font = "0.3.0"
embedded-graphics = "0.8.1"
prometheus = "0.13.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
serde_json = "1"
config = "0.13.3"
lazy_static = "1.4.0"
actix-web = "4.5.1"
actix-web-prometheus = { version = "0.1.2", features = ["process"] }
env_logger = "0.11.0"
log = "0.4"
strum_macros = "0.26.1"
strum = "0.26.1"
simple-layout = "0.0.2"
thiserror = "1.0.50"
tokio-util = "0.7.10"
futures = "0.3.30"
google-sheets4 = "5.0.3"
ron = "0.8.1"

[build-dependencies]
image = "0.24.8"
anyhow = "1.0.75"
