[package]
name = "tf_bridge_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.43"
chrono-tz = { version = "0.10.4", features = ["serde"] }
tinkerforge-async = { version = "^2.0.8-SN5", features = ["prometheus", "serde"], registry = "kellnr-berg-turbenthal" }
#tinkerforge-async = { path = "../generators/json/zip/rust", features = ["prometheus", "serde"] }
tokio = { version = "1.36", features = ["fs", "macros"] }
tokio-stream = { version = "0.1", features = ["time", "sync"] }
sub-array = "0.1"
bitmap-font = "0.3"
embedded-graphics = "0.8"
prometheus = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
config = "0.14"
lazy_static = "1.4"
actix-web = "4.5"
actix-web-prometheus = { version = "0.1", features = ["process"] }
env_logger = "0.11"
log = "0.4"
strum_macros = "0.26"
strum = "0.26"
simple-layout = "0.0.2"
thiserror = "1.0"
tokio-util = "0.7"
futures = "0.3"
google-sheets4 = "5.0"
ron = "0.8"

[build-dependencies]
image = "0.25"
anyhow = "1.0"
